force-app/main/default/objects/Account/fields/Apex_Brand_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Brand_Job_Id__c</fullName>
    <label>Apex Brand Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>