force-app/main/default/objects/Account/fields/Append_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Append_Address_State__c</fullName>
    <description>State derived from email address</description>
    <inlineHelpText>State derived from email address</inlineHelpText>
    <label>Appended State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>