force-app/main/default/objects/Account/fields/Append_Address_ZIp__c.field-meta.xml
<CustomField>
    <fullName>Append_Address_ZIp__c</fullName>
    <description>Zip/Postal Code derived from email address</description>
    <inlineHelpText>Zip/Postal Code derived from email address</inlineHelpText>
    <label>Appended Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>