force-app/main/default/objects/Account/fields/Append_Demo_Education__c.field-meta.xml
<CustomField>
    <fullName>Append_Demo_Education__c</fullName>
    <description>Indicates the highest known level of education the
person has completed. Completed High School; Attended College;
Completed College; Completed Graduate School;
Attended Vocational/Technical</description>
    <inlineHelpText>Indicates the highest known level of education the
person has completed. Completed High School; Attended College;
Completed College; Completed Graduate School;
Attended Vocational/Technical</inlineHelpText>
    <label>Education Level Attained</label>
    <length>255</length>
    <type>Text</type>
</CustomField>