force-app/main/default/objects/Account/fields/Append_Demo_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Append_Demo_Net_Worth__c</fullName>
    <description>Indicates the net worth of the household. 0-5k, 5k-10k, 10k-25k, 25k-50k, 50k-100k, 100k-250k,
250k-500k, 500k-750k, 750k-1mm, 1mm+</description>
    <inlineHelpText>Indicates the net worth of the household. 0-5k, 5k-10k, 10k-25k, 25k-50k, 50k-100k, 100k-250k,
250k-500k, 500k-750k, 750k-1mm, 1mm+</inlineHelpText>
    <label>Net Worth of Household</label>
    <length>255</length>
    <type>Text</type>
</CustomField>