force-app/main/default/objects/Account/fields/Append_Demo_Zip__c.field-meta.xml
<CustomField>
    <fullName>Append_Demo_Zip__c</fullName>
    <description>Known Location by Zip Code</description>
    <inlineHelpText>Known Location by Zip Code</inlineHelpText>
    <label>Location By Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>