force-app/main/default/objects/Account/fields/Append_House_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Append_House_Marital_Status__c</fullName>
    <description>Known marital status of the household. Single or married.</description>
    <inlineHelpText>Known marital status of the household. Single or married.</inlineHelpText>
    <label>Marital Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>