force-app/main/default/objects/Account/fields/Append_House_Owner_Status__c.field-meta.xml
<CustomField>
    <fullName>Append_House_Owner_Status__c</fullName>
    <description>Whether the person owns or rents their home</description>
    <inlineHelpText>Whether the person owns or rents their home</inlineHelpText>
    <label>Home Owner Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>