force-app/main/default/objects/Account/fields/Append_House_Value__c.field-meta.xml
<CustomField>
    <fullName>Append_House_Value__c</fullName>
    <description>Market value of person’s home. In ranges of $25K and $50K increments. 1k-25k; 25k-50k; 50k-75k; 75k-100k; 100k-150k; 150k-200k; 200k-250k; 250k-300k; 300k-350k; 350k-500k; 500k-1mm; 1mm+</description>
    <inlineHelpText>Market value of person’s home. In ranges of $25K and $50K increments. 1k-25k; 25k-50k; 50k-75k; 75k-100k; 100k-150k; 150k-200k; 200k-250k; 250k-300k; 300k-350k; 350k-500k; 500k-1mm; 1mm+</inlineHelpText>
    <label>House Market Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>