force-app/main/default/objects/Account/fields/Append_Interest_Arts_Craft__c.field-meta.xml
<CustomField>
    <fullName>Append_Interest_Arts_Craft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases arts &amp; crafts related products</description>
    <inlineHelpText>Purchases arts &amp; crafts related products</inlineHelpText>
    <label>Known Interest in Arts &amp; Craft</label>
    <type>Checkbox</type>
</CustomField>