force-app/main/default/objects/Account/fields/Append_Interest_Business__c.field-meta.xml
<CustomField>
    <fullName>Append_Interest_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Known Interest In Business</description>
    <inlineHelpText>Known Interest In Business</inlineHelpText>
    <label>Known Interest in Business</label>
    <type>Checkbox</type>
</CustomField>