force-app/main/default/objects/Account/fields/Append_Need_Append__c.field-meta.xml
<CustomField>
    <fullName>Append_Need_Append__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if Converted Lead must be appended from TowerData</description>
    <label>Append Need Append</label>
    <type>Checkbox</type>
</CustomField>