force-app/main/default/objects/Account/fields/Append_Purchase_Automotive__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Automotive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases automotive goods</description>
    <inlineHelpText>Purchases automotive goods</inlineHelpText>
    <label>Automotive Buyer</label>
    <type>Checkbox</type>
</CustomField>