force-app/main/default/objects/Account/fields/Append_Purchase_Charitable_Doner__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Charitable_Doner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates likelihood of being a charitable donor</description>
    <inlineHelpText>Indicates likelihood of being a charitable donor</inlineHelpText>
    <label>Charitable Doner</label>
    <type>Checkbox</type>
</CustomField>