force-app/main/default/objects/Account/fields/Append_Purchase_Cooking__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Cooking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases cooking magazines and interest in cooking</description>
    <inlineHelpText>Purchases cooking magazines and interest in cooking</inlineHelpText>
    <label>Cooking Buyer</label>
    <type>Checkbox</type>
</CustomField>