force-app/main/default/objects/Account/fields/Append_Purchase_Home_Garden__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Home_Garden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases home &amp; garden products</description>
    <inlineHelpText>Purchases home &amp; garden products</inlineHelpText>
    <label>Home &amp; Garden Buyer</label>
    <type>Checkbox</type>
</CustomField>