force-app/main/default/objects/Account/fields/Append_Purchase_Home_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Home_Improvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases home improvement goods</description>
    <inlineHelpText>Purchases home improvement goods</inlineHelpText>
    <label>Home Improvement Buyer</label>
    <type>Checkbox</type>
</CustomField>