force-app/main/default/objects/Account/fields/Append_Purchase_Magazine_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Magazine_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases magazines subscriptions</description>
    <inlineHelpText>Purchases magazines subscriptions</inlineHelpText>
    <label>Magazine Buyer</label>
    <type>Checkbox</type>
</CustomField>