force-app/main/default/objects/Account/fields/Append_Purchase_Pets__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Pets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases pet related products</description>
    <inlineHelpText>Purchases pet related products</inlineHelpText>
    <label>Pet Product Buyer</label>
    <type>Checkbox</type>
</CustomField>