force-app/main/default/objects/Account/fields/Append_Purchase_Sports__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Sports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases sporting goods/Sports related products</description>
    <inlineHelpText>Purchases sporting goods/Sports related products</inlineHelpText>
    <label>Sports Product Buyer</label>
    <type>Checkbox</type>
</CustomField>