force-app/main/default/objects/Account/fields/Append_Purchase_Travel__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases travel related goods; Interest in travel</description>
    <inlineHelpText>Purchases travel related goods; Interest in travel</inlineHelpText>
    <label>Travel Buyer</label>
    <type>Checkbox</type>
</CustomField>