force-app/main/default/objects/Account/fields/Append_Run__c.field-meta.xml
<CustomField>
    <fullName>Append_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Append Run</label>
    <type>Checkbox</type>
</CustomField>