force-app/main/default/objects/Account/fields/Available_Balance_for_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Available_Balance_for_Withdrawal__c</fullName>
    <formula>Commissions_Available_for_Withdrawal__c +  Refund_For_Previous_Payouts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Balance for Withdrawal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>