force-app/main/default/objects/Account/fields/Average_Number_of_days_between_orders__c.field-meta.xml
<CustomField>
    <fullName>Average_Number_of_days_between_orders__c</fullName>
    <formula>IF(Number_of_Orders__c > 1 ,(Last_order_date__c - First_Order_Date__c) / ( Number_of_Orders__c - 1), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Number of Days Between Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>