force-app/main/default/objects/Account/fields/Brand_Assortment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Assortment__c</fullName>
    <description>Brand</description>
    <inlineHelpText>Brand</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Autumn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>