force-app/main/default/objects/Account/fields/Commission_Paid_Out__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid_Out__c</fullName>
    <label>Commission Paid Out</label>
    <summarizedField>Payouts__c.Amount_Transferred__c</summarizedField>
    <summaryFilterItems>
        <field>Payouts__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Payouts__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>