force-app/main/default/objects/Account/fields/Commission_Waiting_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Commission_Waiting_for_Approval__c</fullName>
    <label>Commission Waiting for Approval</label>
    <summarizedField>Payouts__c.Amount_Transferred__c</summarizedField>
    <summaryFilterItems>
        <field>Payouts__c.Status__c</field>
        <operation>equals</operation>
        <value>Waiting For Approval</value>
    </summaryFilterItems>
    <summaryForeignKey>Payouts__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>