force-app/main/default/objects/Account/fields/Commissions_Available_for_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Available_for_Withdrawal__c</fullName>
    <label>Commissions Available for Withdrawal</label>
    <summarizedField>Affiliate_Offer__c.Commissions_Earned_for_Withdrawal__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>