force-app/main/default/objects/Account/fields/Commissions_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Paid__c</fullName>
    <label>Commissions Paid</label>
    <summarizedField>Affiliate_Offer__c.Commissions_Paid__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>