force-app/main/default/objects/Account/fields/Date_Lead_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_Acquired__c</fullName>
    <label>Date Lead Acquired</label>
    <type>Date</type>
</CustomField>