force-app/main/default/objects/Account/fields/Days_After_Last_Order__c.field-meta.xml
<CustomField>
    <fullName>Days_After_Last_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days After Last Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>