force-app/main/default/objects/Account/fields/Days_Between_Avg_and_Last__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Avg_and_Last__c</fullName>
    <formula>Days_Since_Last_Order__c -  Average_Number_of_days_between_orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between Avg and Last</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>