force-app/main/default/objects/Account/fields/DF_Append_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>DF_Append_Run_Date__c</fullName>
    <label>DF Append Run Date</label>
    <type>DateTime</type>
</CustomField>