force-app/main/default/objects/Account/fields/DF_Append_Success__c.field-meta.xml
<CustomField>
    <fullName>DF_Append_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DF Append Success</label>
    <type>Checkbox</type>
</CustomField>