force-app/main/default/objects/Account/fields/DF_Email__c.field-meta.xml
<CustomField>
    <fullName>DF_Email__c</fullName>
    <label>DF Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>