force-app/main/default/objects/Account/fields/DF_Match_Probability__c.field-meta.xml
<CustomField>
    <fullName>DF_Match_Probability__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DF Match Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>