force-app/main/default/objects/Account/fields/EAM_Date_First_Seen__c.field-meta.xml
<CustomField>
    <fullName>EAM_Date_First_Seen__c</fullName>
    <description>Spanning over 200,000,000 unique emails in the past 12 months, this data
identifies active emails within your list. Sourced from trusted mailing partners,
this provides the month and year (in YYYY-MM format) we last saw the
email “open.” Match rates typically range from 30-40% for U.S. data.</description>
    <inlineHelpText>Spanning over 200,000,000 unique emails in the past 12 months, this data
identifies active emails within your list. Sourced from trusted mailing partners,
this provides the month and year (in YYYY-MM format) we last saw the
email “open.” Match rates</inlineHelpText>
    <label>Date Email First Seen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>