force-app/main/default/objects/Account/fields/EAM_Month_Last_Opened__c.field-meta.xml
<CustomField>
    <fullName>EAM_Month_Last_Opened__c</fullName>
    <description>The month when we last saw the email address open a message. Great for determining which addresses are in active use.</description>
    <inlineHelpText>The month when we last saw the email address open a message. Great for determining which addresses are in active use.</inlineHelpText>
    <label>Month Last Opened</label>
    <length>255</length>
    <type>Text</type>
</CustomField>