force-app/main/default/objects/Account/fields/EAM_Velocity__c.field-meta.xml
<CustomField>
    <fullName>EAM_Velocity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The activity level of an email address over the past three months</description>
    <inlineHelpText>The activity level of an email address over the past three months</inlineHelpText>
    <label>Email Velocity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>