force-app/main/default/objects/Account/fields/Email_Append_Run__c.field-meta.xml
<CustomField>
    <fullName>Email_Append_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Append Run</label>
    <type>Checkbox</type>
</CustomField>