force-app/main/default/objects/Account/fields/Email_Append_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Append_Run_Date__c</fullName>
    <label>Email Append Run Date</label>
    <type>DateTime</type>
</CustomField>