force-app/main/default/objects/Account/fields/Email_Corrections__c.field-meta.xml
<CustomField>
    <fullName>Email_Corrections__c</fullName>
    <description>The following is the corrected version of the email</description>
    <inlineHelpText>The following is the corrected version of the email</inlineHelpText>
    <label>Corrected Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>