force-app/main/default/objects/Account/fields/Email_Quality__c.field-meta.xml
<CustomField>
    <fullName>Email_Quality__c</fullName>
    <description>Supported values are: from "*" to "*****",
"FW" for FRAUD WARNING,
"ST" for POSSIBLE SPAM TRAP,
"BA" for POSSIBLE BOUNCE ALERT,
"HB" for HARD BOUNCE ALERT</description>
    <label>Email Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>